# openviper

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_RULES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  admin.html  ai_registry.html  api_reference.html  architecture.html  authentication.html  cli.html  deployment.html  exceptions.html  genindex.html  http.html  index.html  installation.html  lint.sh  load_test.sh  objects.inv  orm.html  parniq_link  py-modindex.html  pyproject.toml  quickstart.html  repro_model_event.py  requirements-dev.txt  requirements.txt  scheduler.html  search.html  searchindex.js  serializers.html  settings.html  storage.html  tasks.html  tutorial_blog.html
.github/: copilot-instructions.md  release.yml
.github/workflows/: build.yml  docs.yml  github-pages.yml  openviper-tools.yml  publish-pypi.yml  publish-test-pypi.yml  quality.yml  release.yml  sanity.yml  static.yml  test-release.yml  test.yml
_modules/: index.html  openviper.html
_modules/openviper/: app.html  exceptions.html
_sources/: admin.rst.txt  architecture.rst.txt  exceptions.rst.txt  index.rst.txt  orm.rst.txt  quickstart.rst.txt  settings.rst.txt  storage.rst.txt  tasks.rst.txt
admin_frontend/: AGENTS.md  cypress.config.ts  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1773162904513-6b3691db2d986.mjs
admin_frontend/cypress/: tsconfig.json
admin_frontend/src/: App.vue  main.ts  router.ts  style.css  vite-env.d.ts
docs/: admin.rst  ai.rst  app.rst  apps.rst  array_fields.rst  auth.rst  auth_hooks.rst  cache.rst  cli.rst  conf.py  conf.rst  contrib.rst  core.rst  country_field.rst  currency_field.rst  database_backends.rst  database_routing.rst  db.rst  db_tools.rst  debug.rst  email.rst  exceptions.rst  generate_version_index.py  geolocation.rst  http.rst  index.rst  installation.rst  middleware.rst  openapi.rst  plugins.rst  routing.rst  serializers.rst  single_models.rst  staticfiles.rst  storage.rst  tasks.rst  template.rst  testing.rst  tutorial_blog.rst  utils.rst
docs/0.0.1/: admin.rst  ai.rst  api_reference.rst  auth.rst  conf.py  conf.rst  contrib.rst  db.rst  deployment.rst  http.rst  index.rst  installation.rst  middleware.rst  openapi.rst  quickstart.rst  routing.rst  scheduler.rst  serializers.rst  staticfiles.rst  tasks.rst  template.rst  tutorial_blog.rst
docs/0.0.2/: ai.rst  auth.rst  conf.py  contrib.rst  db.rst  index.rst  installation.rst  middleware.rst  tutorial_blog.rst  utils.rst
docs/_static/: version_banner.css  version_banner.js
docs/_templates/: layout.html
docs/auth/: index.rst  social_login.rst
docs/openapi/: configuration.rst
examples/ai_moderation_platform/: .dockerignore  Dockerfile  Dockerfile.test  README.md  db.sqlite3-shm  db.sqlite3-wal  docker-compose.mariadb.yml  docker-compose.mssql.yml  docker-compose.oracle.yml  docker-compose.postgres.yml  docker-compose.prod.postgres.yml  docker-compose.yml  entrypoint.sh  openviper-0.0.1-py3-none-any.whl  pytest.ini  viperctl.py
examples/ai_smart_recipe_generator/: .gitignore  Dockerfile  README.md  docker-compose.yml  viperctl.py
examples/country_field/: __init__.py  models.py  serializers.py  views.py
examples/custom_provider_demo/: README.md  demo.py
examples/ecommerce_clone/: .dockerignore  Dockerfile  README.md  docker-compose.yml  seed_products.py  viperctl.py
examples/flexible/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml
examples/fx/: Dockerfile  README.md  app.py  docker-compose.yml  models.py  settings.py
examples/robotwit/: .dockerignore  Dockerfile  README.md  docker-compose.yml  viperctl.py
examples/todoapp/: Dockerfile  README.md  admin.py  app.py  create_admin.py  docker-compose.yml  models.py  settings.py
examples/tp/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.mariadb.yml  docker-compose.prod.postgres.yml  docker-compose.yml  entrypoint.sh  minova-0.0.1-py3-none-any.whl  requirements.txt  test_settings.py  viperctl.py
openviper/: __init__.py  _version.py  app.py  cli.py  exceptions.py  version.py  viperctl.py
openviper/admin/: __init__.py  actions.py  auth_admin.py  constants.py  decorators.py  discovery.py  fields.py  history.py  import_helpers.py  middleware.py  options.py  registry.py  site.py  types.py
openviper/ai/: __init__.py  base.py  devkit.py  exceptions.py  extension.py  provider_utils.py  registry.py  router.py  security.py  types.py
openviper/apps/: __init__.py  exceptions.py  lifecycle.py
openviper/auth/: __init__.py  _cache_utils.py  _user_cache.py  admin.py  authentications.py  backends.py  cache_utils.py  constants.py  decorators.py  exceptions.py  hashers.py  hooks.py  jwt.py  manager.py  middleware.py  models.py  permission_checker.py  permission_core.py  permissions.py  request_state.py  sessions.py  token_blocklist.py  types.py  user.py  user_cache.py  utils.py
openviper/cache/: __init__.py  base.py  db.py  db_backend.py  dragonfly.py  file.py  memcached.py  memory.py  redis.py  validation.py
openviper/conf/: __init__.py  settings.py  task_defaults.py  types.py
openviper/contrib/: __init__.py  types.py
openviper/core/: __init__.py  app_resolver.py  context.py  flexible_adapter.py  types.py
openviper/db/: __init__.py  _model_registry.py  _traversal.py  connection.py  connections.py  constants.py  events.py  exceptions.py  executor.py  fields.py  model_registry.py  models.py  queryspec.py  schema_builders.py  shared_metadata.py  traversal.py  utils.py
openviper/debug/: __init__.py  traceback_page.py
openviper/http/: __init__.py  permissions.py  request.py  response.py  types.py  uploads.py  views.py
openviper/management/: __init__.py  flexible_adapter.py
openviper/middleware/: __init__.py  auth.py  base.py  cors.py  csrf.py  db.py  error.py  ratelimit.py  security.py
openviper/openapi/: __init__.py  router.py  schema.py  ui.py  utils.py
openviper/tasks/: api.py  (+23 more)
repro_app/: models.py
scratch/: check_user.py  reproduce_login.py
tests/: conftest.py
(+1265 files in other folders)
